src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__annotation_at_line_one.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
first.rs:1
>  1 |     line 1 content
     └──> No context line above
