src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__annotation_multiline_content.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
file.rs:5
   4 |     line 4 content
>  5 |     line 5 content
     └──> First line of feedback
          Second line continues
          Third line concludes
