src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__annotations_with_saved_to.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
code.rs:5
   4 |     line 4 content
>  5 |     line 5 content
     └──> Note here

Saved to /home/user/reviews/code-review.md
