src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__command_exit_mode_with_skill_content.snap
---
source: src/output/snapshot_tests.rs
expression: stable_output
---
TAGS:
  [# COMMIT] Include in commit message

GENERAL:
  Ready to commit. All tests pass.

NEXT: /commit — Create a git commit with the reviewed changes
  Command: /path/to/skills/commit.md
────────────────────────────────────
  ---
  description: "Create a well-structured git commit"
  ---
  
  # /commit
  
  ## Instructions
  
  1. Review all staged changes with `git diff --staged`
  2. Write a commit message following conventional commits format
  3. The first line should be max 72 characters
  4. Include a body explaining the "why" not just the "what"
  
  ## Format
  
  ```
  <type>(<scope>): <subject>
  
  <body>
  
  <footer>
  ```
  
  ## Types
  
  - feat: New feature
  - fix: Bug fix
  - docs: Documentation only
  - refactor: Code change that neither fixes a bug nor adds a feature
  
────────────────────────────────────

---

src/auth.rs:10-12
    9 |     line 9 content
>  10 |     line 10 content
>  11 |     line 11 content
>  12 |     line 12 content
      └──> [# COMMIT] This refactors the auth module for clarity
