src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__context_line_whitespace_only.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
whitespace.rs:3
>  3 |     line 3 content
     └──> Context line 2 should be skipped
