src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__diff_annotation_added_line.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
file.rs (old:3 new:4):
   :3 | +    more_code();
> 3:4 |  }
      └──> Review this new addition
