src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__diff_annotation_deleted_line.snap
---
source: src/output/snapshot_tests.rs
expression: output
---
file.rs (old:2):
  1:1 |  fn main() {
> 2:  | -    removed_line();
      └──> Why was this removed?
