src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__diff_annotation_mixed_replacement.snap
---
source: src/output/snapshot_tests.rs
expression: "format_output(&review, OutputMode::Cli).text"
---
file.rs (old:2 → new:3):
  1:1 |  fn main() {
> 2:  | -    old_one();
> 3:  | -    old_two();
>  :2 | +    new_one();
>  :3 | +    new_two();
      └──> This replacement changes behavior
