src-tauri/src/output/snapshots/annot_lib__output__snapshot_tests__diff_annotation_new_only_single.snap
---
source: src/output/snapshot_tests.rs
expression: "format_output(&review, OutputMode::Cli).text"
---
file.rs (new:2):
  3:  | -    old_two();
>  :2 | +    new_one();
      └──> Name this better
